--- a/.github/workflows/typst_compile.yml
+++ b/.github/workflows/typst_compile.yml
@@ -1,7 +1,7 @@
 on:
   push:
     paths:
-      - 'doc/**.typ'
+      - 'document/**.typ'
       - '.github/workflows/typst_compile.yml'
   workflow_dispatch:
 
@@ -13,10 +13,10 @@ jobs:
 
       - uses: typst-community/setup-typst@v3
 
-      - run: typst compile doc/main.typ doc/main.pdf
+      - run: typst compile document/main.typ document.pdf
       
       - uses: EndBug/add-and-commit@v9
         with:
           github_token: ${{ secrets.GH_TOKEN }}
-          add: '-f doc/main.pdf'
-          message: Add generated PDF
+          add: 'document.pdf'
+          message: Add compiled PDF
